test-aws/aws_configs/us-east-2/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-396f1950",
     "NetworkAclId": "acl-072d8c6e",
     "SubnetId": "subnet-1b22da60"
    },
    {
     "NetworkAclAssociationId": "aclassoc-266f194f",
     "NetworkAclId": "acl-072d8c6e",
     "SubnetId": "subnet-8c12a6e5"
    },
    {
     "NetworkAclAssociationId": "aclassoc-386f1951",
     "NetworkAclId": "acl-072d8c6e",
     "SubnetId": "subnet-da3f2390"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-072d8c6e",
   "OwnerId": "118292266645",
   "Tags": [],
   "VpcId": "vpc-5d2b8e34"
  }
 ]
}
