test-aws/aws_configs/us-east-2/RouteTables.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-70dc6319",
     "RouteTableId": "rtb-f697349f"
    }
   ],
   "OwnerId": "118292266645",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-f697349f",
   "Routes": [
    {
     "DestinationCidrBlock": "172.31.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-e78c598e",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-5d2b8e34"
  }
 ]
}
