test-aws/aws_configs/us-east-2/SecurityGroups.json
{
 "SecurityGroups": [
  {
   "Description": "Testing group fo non-production purposes, with SSH access enabled",
   "GroupId": "sg-dd4b39b5",
   "GroupName": "testing",
   "IpPermissions": [
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 2049,
     "IpProtocol": "tcp",
     "IpRanges": [],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 2049,
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-dd4b39b5",
       "UserId": "118292266645"
      }
     ]
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "118292266645",
   "VpcId": "vpc-5d2b8e34"
  },
  {
   "Description": "default VPC security group",
   "GroupId": "sg-ee7bfd87",
   "GroupName": "default",
   "IpPermissions": [],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "118292266645",
   "VpcId": "vpc-5d2b8e34"
  }
 ]
}
